Adding skip downloads for In

--- a/config.example.json
+++ b/config.example.json
@@ -6,6 +6,8 @@
     "options": []
   },
   "params":{
-    "source" : ""
+    "bucketFolder" : "",
+    "localFolder": "",
+    "skipDownload": ""
  }
 }
